# interview-helper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: docs_freshness.py  guard_run.py  post_edit.py  protect_paths.py
.claude/skills/docs-check/: SKILL.md
.claude/skills/latency-check/: SKILL.md
.claude/skills/mock-interview/: SKILL.md
.claude/skills/prompt-conventions/: SKILL.md
.claude/skills/session-report/: SKILL.md
docs/: resources.md
src/interview_helper/: answer.py  bench.py  capture.py  main.py  pipeline.py  record.py  report.py  session_log.py  transcribe.py  web.py
src/interview_helper/static/: index.html
tests/: test_answer.py  test_transcribe.py
tests/fixtures/: SCRIPT.md
