[project]
name = "interview-helper"
version = "0.1.0"
description = "Real-time interview copilot: system/mic audio -> faster-whisper -> Claude Haiku"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1",
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "numpy>=1.26",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
# GPU-транскрипция: uv sync --extra gpu (нужна NVIDIA-карта, драйвер CUDA 12+)
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12>=9,<10"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_helper"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
